@@ -1,3 +1,7 @@
+2002-01-14  Bradford Hovinen  <hovinen@ximian.com>
+
+	* main.c (main): Remove Ximian archiver stuff
+
 2002-01-14  Richard Hestilow  <hestilow@ximian.com>
 
 	* Gnome 2 port. (Settings only halfway work right now.)
